--- a/src/main/webapp/app/style.css
+++ b/src/main/webapp/app/style.css
@@ -26,15 +26,20 @@ h1, .btn {
     background-color: #3af;
 }
 
+#buttons {
+    margin: 0 auto;
+    width: 416px;
+}
+
 .btn {
     background-color: #ddd;
     border: 2px solid #aaa;
     border-radius: 5px;
     cursor: pointer;
+    display: inline-block;
     margin: 20px auto;
     padding: 10px 20px;
     transition: all .2s;
-    width: 50px;
 }
 
 .btn:hover {
@@ -42,3 +47,10 @@ h1, .btn {
     border: 2px solid #bbb;
 }
 
+#btn-next {
+    float: left;
+}
+
+#btn-start, #btn-stop {
+    float: right;
+}
